--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,12 @@
     <version>9.0.0.M1</version>
     <type>pom</type>
 </dependency>
-
+<dependency>
+  <groupId>com.heroku</groupId>
+  <artifactId>webapp-runner</artifactId>
+  <version>8.5.11.3</version>
+  <scope>provided</scope>
+</dependency>
 
   </dependencies>
   <build>
