--- a/pom.xml
+++ b/pom.xml
@@ -41,14 +41,32 @@
     <version>9.0.0.M1</version>
     <type>pom</type>
 </dependency>
-<dependency>
-  <groupId>com.heroku</groupId>
-  <artifactId>webapp-runner</artifactId>
-  <version>8.5.11.3</version>
-  <scope>provided</scope>
-</dependency>
+
 
   </dependencies>
+	<plugins>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>2.3</version>
+          <executions>
+              <execution>
+                  <phase>package</phase>
+                  <goals><goal>copy</goal></goals>
+                  <configuration>
+                      <artifactItems>
+                          <artifactItem>
+                              <groupId>com.github.heroku</groupId>
+                              <artifactId>webapp-runner</artifactId>
+                              <version>${webapp-runner.version</version>
+                              <destFileName>webapp-runner.jar</destFileName>
+                          </artifactItem>
+                      </artifactItems>
+                  </configuration>
+              </execution>
+          </executions>
+      </plugin>
+  </plugins>
   <build>
     <finalName>Task</finalName>
   </build>
