--- a/pom.xml
+++ b/pom.xml
@@ -41,32 +41,17 @@
     <version>9.0.0.M1</version>
     <type>pom</type>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.github.jsimone/webapp-runner -->
+<dependency>
+    <groupId>com.github.jsimone</groupId>
+    <artifactId>webapp-runner</artifactId>
+    <version>9.0.20.0</version>
+    <scope>provided</scope>
+</dependency>
 
 
   </dependencies>
-	<plugins>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>2.3</version>
-          <executions>
-              <execution>
-                  <phase>package</phase>
-                  <goals><goal>copy</goal></goals>
-                  <configuration>
-                      <artifactItems>
-                          <artifactItem>
-                              <groupId>com.github.heroku</groupId>
-                              <artifactId>webapp-runner</artifactId>
-                              <version>${webapp-runner.version</version>
-                              <destFileName>webapp-runner.jar</destFileName>
-                          </artifactItem>
-                      </artifactItems>
-                  </configuration>
-              </execution>
-          </executions>
-      </plugin>
-  </plugins>
+	
   <build>
     <finalName>Task</finalName>
   </build>
