--- a/pom.xml
+++ b/pom.xml
@@ -41,16 +41,32 @@
     <version>9.0.0.M1</version>
     <type>pom</type>
 </dependency>
-<!-- https://mvnrepository.com/artifact/com.github.jsimone/webapp-runner -->
-<dependency>
-    <groupId>com.github.jsimone</groupId>
-    <artifactId>webapp-runner</artifactId>
-    <version>9.0.20.0</version>
-    <scope>provided</scope>
-</dependency>
+
 
 
   </dependencies>
+	<plugins>
+	<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals><goal>copy</goal></goals>
+                    <configuration>
+                        <artifactItems>
+                            <artifactItem>
+                                <groupId>com.github.jsimone</groupId>
+                                <artifactId>webapp-runner</artifactId>
+                                <version>9.0.13.0</version>
+                                <destFileName>webapp-runner.jar</destFileName>
+                            </artifactItem>
+                        </artifactItems>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+	</plugins>
 	
   <build>
     <finalName>Task</finalName>
